style textArea row=3

--- a/src/app/@core/auth/adjuntar-mesa/adjuntar-mesa.component.html
+++ b/src/app/@core/auth/adjuntar-mesa/adjuntar-mesa.component.html
@@ -11,14 +11,14 @@
         placeholder="Ingrese Título..."
         formControlName="titulo"/>
     </mat-form-field>
-    
-    <mat-form-field appearance="outline" color="primary">
+
+    <mat-form-field class="mat-tx" appearance="outline" color="primary">
       <mat-label>Descripción Documento</mat-label>
       <textarea
         matInput
         placeholder="Ingrese Descripción..."
         formControlName="descripcionArchivo"
-        rows="2">
+        rows="3">
       </textarea>
     </mat-form-field>
   </div>
