--- a/src/app/pages/tramite-documentario/detalle-adjuntar-interno/detalle-adjuntar-interno.component.html
+++ b/src/app/pages/tramite-documentario/detalle-adjuntar-interno/detalle-adjuntar-interno.component.html
@@ -25,13 +25,13 @@
       </div>
     </div>
 
-    <mat-form-field appearance="outline" color="primary">
+    <mat-form-field appearance="outline" color="primary" class="mat-tx">
       <mat-label>Descripción Documento</mat-label>
       <textarea
         matInput
         placeholder="Ingrese Descripción..."
         formControlName="descripcionArchivo"
-        rows="2">
+        rows="3">
       </textarea>
     </mat-form-field>
 
