--- a/src/app/pages/tramite-documentario/detalle-sielse-guardar/detalle-sielse-guardar.component.html
+++ b/src/app/pages/tramite-documentario/detalle-sielse-guardar/detalle-sielse-guardar.component.html
@@ -108,13 +108,14 @@
         style="width: 100%; margin-top: 5px"
         appearance="outline"
         color="primary"
+        class="mat-tx"
       >
         <mat-label>Indicaciones de Inspección</mat-label>
         <textarea
           matInput
           style="text-transform: uppercase"
           formControlName="indicaciones"
-          rows="2"
+          rows="3"
         ></textarea>
       </mat-form-field>
 
