--- a/src/app/pages/tramite-documentario/documento-derivar/documento-derivar.component.html
+++ b/src/app/pages/tramite-documentario/documento-derivar/documento-derivar.component.html
@@ -71,14 +71,14 @@
     (conCopia)="conCopia($event)"
   ></destinatario-buscar>
 
-  <mat-form-field appearance="outline" color="primary">
+  <mat-form-field appearance="outline" color="primary" class="mat-tx">
     <mat-label>Proveido</mat-label>
     <textarea
       matInput
       autosize
       formControlName="descripcionSolicitudAtencion"
       maxlength="500"
-      rows="2"
+      rows="3"
     ></textarea>
   </mat-form-field>
   <label class="nopadding clrlbl">
