--- a/src/app/pages/tramite-documentario/documento-interno-visor/documento-interno-visor.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-visor/documento-interno-visor.component.html
@@ -26,14 +26,14 @@
       <mat-form-field
         fxFlex="60"
         appearance="outline"
-        class="mat-sm"
+        class="mat-tx"
         color="primary">
         <mat-label>Proveido Documento</mat-label>
         <textarea
           matInput
           placeholder="Ingrese Proveido..."
           formControlName="proveidoDocumento"
-          rows="2">
+          rows="3">
         </textarea>
       </mat-form-field>
       <mat-form-field
