--- a/src/app/pages/tramite-documentario/documento-nuevo-datos/documento-nuevo-datos.component.html
+++ b/src/app/pages/tramite-documentario/documento-nuevo-datos/documento-nuevo-datos.component.html
@@ -275,14 +275,14 @@
     </div>
   </row-container>
 
-  <mat-form-field appearance="outline" color="primary">
+  <mat-form-field appearance="outline" color="primary" class="mat-tx">
     <mat-label>Asunto</mat-label>
     <textarea
       matInput
       autosize
       formControlName="contenidoDocumento"
       maxlength="500"
-      rows="2"
+      rows="3"
     ></textarea>
   </mat-form-field>
   <label class="nopadding clrlbl">
