--- a/src/app/pages/tramite-documentario/detalle-adjuntar/detalle-adjuntar.component.html
+++ b/src/app/pages/tramite-documentario/detalle-adjuntar/detalle-adjuntar.component.html
@@ -33,13 +33,13 @@
       <mat-radio-button value="2">Anexo</mat-radio-button>
     </mat-radio-group>
 
-    <mat-form-field appearance="outline" color="primary">
+    <mat-form-field appearance="outline" color="primary" class="mat-tx">
       <mat-label>Descripción Documento</mat-label>
       <textarea
         matInput
         placeholder="Ingrese Descripción..."
         formControlName="descripcionArchivo"
-        rows="2"
+        rows="3"
       >
       </textarea>
     </mat-form-field>
