--- a/src/app/pages/tramite-documentario/detalle-rechazar-interno/detalle-rechazar-interno.component.html
+++ b/src/app/pages/tramite-documentario/detalle-rechazar-interno/detalle-rechazar-interno.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" novalidate>
-  <h1 mat-dialog-title>{{titulo}}</h1>
+  <h1 mat-dialog-title>{{ titulo }}</h1>
   <mat-divider class="mg-bot-8"></mat-divider>
   <div mat-dialog-content fxLayout="column" fxLayoutGap="8px">
     <mat-form-field appearance="outline" color="primary">
@@ -8,16 +8,18 @@
         matInput
         readonly
         placeholder="Aprobación"
-        formControlName="aprobacion"/>
+        formControlName="aprobacion"
+      />
     </mat-form-field>
-    
-    <mat-form-field appearance="outline" color="primary">
+
+    <mat-form-field appearance="outline" color="primary" class="mat-tx">
       <mat-label>Descripción Rechazo</mat-label>
       <textarea
         matInput
         placeholder="Ingrese Descripción..."
         formControlName="descripcionRechazo"
-        rows="2">
+        rows="3"
+      >
       </textarea>
     </mat-form-field>
   </div>
