fix styles tramite-documentario

--- a/src/app/pages/tramite-documentario/remitente-buscar/remitente-buscar.component.html
+++ b/src/app/pages/tramite-documentario/remitente-buscar/remitente-buscar.component.html
@@ -38,7 +38,7 @@
           (click)="clear()">
     <mat-icon>close</mat-icon>
   </button>
-  <mat-hint align="start" style="margin-top: 0 !important">
+  <mat-hint align="start" style="margin-top: 0 !important; font-size: 12px;">
     (mínimo 5 caracteres)
   </mat-hint>
 </mat-form-field>
