--- a/src/app/pages/tramite-documentario/destinatario-buscar/destinatario-buscar.component.html
+++ b/src/app/pages/tramite-documentario/destinatario-buscar/destinatario-buscar.component.html
@@ -30,7 +30,7 @@
 </div>
 
 <div fxLayout="column">
-  <div style="font-size: 10px">
+  <div style="font-size: 12px; padding-bottom: 10px">
     (Ingrese las 5 primeras letras del nombre o apellido)
   </div>
   <destinatario-filtro
