--- a/src/app/@shared/two-picker/two-picker.component.html
+++ b/src/app/@shared/two-picker/two-picker.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutGap="8px" fxLayout.xs="column">
 
-  <mat-form-field fxFlex="47" color="primary" appearance="outline" floatLabel="always">
+  <mat-form-field class="mat-sm" fxFlex="47" color="primary" appearance="outline" floatLabel="always">
     <mat-label>Fecha Inicio</mat-label>
     <input matInput [matDatepicker]="pickerInicio" placeholder="dd/mm/aaaa"
            readonly [(ngModel)]="fechaInicio" (dateChange)="changeInicio($event.value)">
@@ -8,7 +8,7 @@
     <mat-datepicker #pickerInicio disabled="false"></mat-datepicker>
   </mat-form-field>
 
-  <mat-form-field fxFlex="47" color="primary" appearance="outline" floatLabel="always">
+  <mat-form-field class="mat-sm" fxFlex="47" color="primary" appearance="outline" floatLabel="always">
     <mat-label>Fecha Fin</mat-label>
     <input matInput [matDatepicker]="pickerFin" placeholder="dd/mm/aaaa"
            readonly [(ngModel)]="fechaFin" (dateChange)="changeFin($event.value)">
