--- a/src/app/pages/tramite-documentario/bandeja-buscar/bandeja-buscar.scss
+++ b/src/app/pages/tramite-documentario/bandeja-buscar/bandeja-buscar.scss
@@ -29,3 +29,6 @@ mat-mdc-form-field-subscript-wrapper {
 .mat-button-toggle {
   font-weight: bold;
 }
+.centrar {
+  padding-top: 15px !important;
+}
