--- a/src/app/pages/tramite-documentario/remitente-update-add/remitente-update-add.component.scss
+++ b/src/app/pages/tramite-documentario/remitente-update-add/remitente-update-add.component.scss
@@ -1,17 +1,27 @@
-.h4{
-    color: red !important;
-  }
-  .mat-form-field{
-    align-content: center;
-    color: black;
-  }
-  .mat-option{
-    color: #124073;
-  }
-  .mat-dialog-title{
-    color:  #103967;
-    text-align: center;
-    text-shadow: 3px 3px 2px #c2ced6;
-  }
+.h4 {
+  color: red !important;
+}
+.mat-form-field {
+  align-content: center;
+  color: black;
+  margin: 0;
+}
+.mat-option {
+  color: #124073;
+}
+.mat-dialog-title {
+  color: #103967;
+  text-align: center;
+  text-shadow: 3px 3px 2px #c2ced6;
+}
+mat-form-field[hidden] {
+  display: none;
+}
+.mat-mdc-form-field {
+  margin: 0 !important;
+}
 
- 
+.mat-mdc-dialog-content{
+  max-height: 75vh !important
+}
+
